# wasm

./: Cargo.toml  build.sh  index.html  style.css
css/: lights.css
html/: 3js.html  drag.html  gradient.html  lights.html  point.html  shakes.html  sin_wave.html  special.html  square.html  triangle.html  user_input.html
js/: gradient.js  lights.js  point.js  sin_wave.js  special.js  square.js  triangle.js
pkg/: package.json  webassembly_webgl_viewer.d.ts  webassembly_webgl_viewer.js  webassembly_webgl_viewer_bg.wasm  webassembly_webgl_viewer_bg.wasm.d.ts
src/: drag.rs  gradient.rs  lib.rs  point.rs  shakes.rs  sin_wave.rs  special.rs  square.rs  triangle.rs  user_input.rs  utils.rs
web/: main.js
web/pages/: first.html
